# speed_planning

./: .clang-format  CMakeLists.txt  fem_smoother.h  idm_planner.h  kine_bicycle_mpc.h  matplotlibcpp.h  nlp_fem_smoother.h  path_optimizer.h  speed_optimizer.h  test_fem_smoother.cc  test_idm_planner.cc  test_kine_bicycle_mpc.cc  test_nlp_fem_smoother.cc  test_path_optimizer.cc  test_speed_optimizer.cc  test_topp_ra.cc  topp_ra.h
