cmake_minimum_required(VERSION 3.18)
project(speed_optimizer)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE Debug)

find_package(OsqpEigen REQUIRED)
find_package(Matplot++ REQUIRED)
find_package(Python3 COMPONENTS Interpreter Development REQUIRED)

add_executable(test_topp_ra test_topp_ra.cc)
target_link_libraries(test_topp_ra OsqpEigen::OsqpEigen Matplot++::matplot Python3::Python)
add_executable(test_path_optimizer test_path_optimizer.cc)
target_link_libraries(test_path_optimizer OsqpEigen::OsqpEigen Matplot++::matplot Python3::Python)
add_executable(test_speed_optimizer test_speed_optimizer.cc)
target_link_libraries(test_speed_optimizer OsqpEigen::OsqpEigen Matplot++::matplot Python3::Python)
add_executable(test_fem_smoother test_fem_smoother.cc)
target_link_libraries(test_fem_smoother OsqpEigen::OsqpEigen Matplot++::matplot Python3::Python)
add_executable(test_nlp_fem_smoother test_nlp_fem_smoother.cc)
target_link_libraries(test_nlp_fem_smoother OsqpEigen::OsqpEigen Matplot++::matplot Python3::Python gtest)
add_executable(test_kine_bicycle_mpc test_kine_bicycle_mpc.cc)
target_link_libraries(test_kine_bicycle_mpc OsqpEigen::OsqpEigen Matplot++::matplot Python3::Python)
add_executable(test_idm_planner test_idm_planner.cc)
target_link_libraries(test_idm_planner OsqpEigen::OsqpEigen Matplot++::matplot Python3::Python)
